spacing fix

--- a/packages/styles/variables.css
+++ b/packages/styles/variables.css
@@ -69,7 +69,7 @@
   --space-small: 16px;
   --space-medium: 18px;
   --space-large: 24px;
-  --space-largest: 29px;
+  --space-largest: 32px;
   --space-half: 4px;
   --space-three-quarters: 6px;
   --space-quarter: 2px;
